Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36378

The deprecated parameter innodb_purge_rseg_truncate_frequency is not being recognized

    XMLWordPrintable

Details

    Description

      There was a spelling mistake MARIADB_REMOVED_OPTION("innodb-purge-truncate-frequency") in the fix of MDEV-34803. This apparently causes the deprecated parameter innodb_purge_rseg_truncate_frequency to be unrecognized at server startup.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1.5h
                  1.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.