MDEV-36378 Recognize innodb_purge_rseg_truncate_frequency

In commit bda40ccb854cc1531ec7bd1ab779504c7e00bd87 (MDEV-34803)
there was a spelling mistake that somehow causes the deprecated
parameter innodb_purge_rseg_truncate_frequency to be rejected
at server startup.